[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/containers/Placeholder_640-480_dos.png" type="Texture" id=1]
[ext_resource path="res://ui/Interfaces/tutorialScreen/tutorialUI.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/icons/Flechas/atras.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/icons/Flechas/siguiente.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/GaramondPremrPro-Smbd.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/tutorials/Minijuego_1/Paso_1_1.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/icons/Equis y palomitas/equis reuglar blanca.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/icons/Equis y palomitas/equis irregular blanco.png" type="Texture" id=8]
[ext_resource path="res://assets/SFX_Music/Sonidos/pass.ogg" type="AudioStream" id=9]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 640, 480 )

[sub_resource type="Animation" id=2]
resource_name = "_next"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Tutorial:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 144, 81 ), Vector2( -1800, 81 ), Vector2( 2100, 81 ), Vector2( 144, 81 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Tutorial:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 5 )

[node name="tutorialUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
tutoName = "M9"

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.313726 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -816.0
margin_top = -459.0
margin_right = 816.002
margin_bottom = 459.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="tut1" type="TextureRect" parent="Tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.504
anchor_bottom = 0.5
margin_left = -764.0
margin_top = -423.0
margin_right = 761.472
margin_bottom = 422.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="back" type="TextureButton" parent="Tutorial"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -119.0
margin_top = -52.5
margin_right = -14.0
margin_bottom = 52.5
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="AudioStreamPlayer2D" parent="Tutorial/back" groups=[
"SFX",
]]
stream = ExtResource( 9 )

[node name="after" type="TextureButton" parent="Tutorial"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 25.0
margin_top = -52.5
margin_right = 130.0
margin_bottom = 52.5
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="AudioStreamPlayer2D" parent="Tutorial/after" groups=[
"SFX",
]]
stream = ExtResource( 9 )

[node name="close" type="TextureButton" parent="Tutorial"]
margin_left = 1571.5
margin_top = -48.4983
margin_right = 1684.5
margin_bottom = 65.5017
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/_next = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -195.5
margin_right = 195.5
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 391.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 3 )
text = "¿Cómo jugar?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 391.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 3 )
text = "Paso 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Tutorial/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Tutorial/after" to="." method="_on_after_pressed"]
[connection signal="pressed" from="Tutorial/close" to="." method="_on_close_pressed"]
